--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "babel-preset-react": "^6.22.0",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.26.1",
+    "eslint": "^3.15.0",
+    "eslint-loader": "^1.6.1",
+    "eslint-plugin-react": "^6.9.0",
     "html-loader": "^0.4.4",
     "image-webpack-loader": "^3.2.0",
     "json-loader": "^0.5.4",
